--- a/PathFinder.csproj
+++ b/PathFinder.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9352D6D5-E1B1-4BD8-85E4-96354306B95F}</ProjectGuid>
+    <ProjectGuid>{B50A9E27-FF29-48E3-A3EE-4149E3C6D53B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>maze</RootNamespace>
-    <AssemblyName>maze</AssemblyName>
+    <RootNamespace>PathFinder</RootNamespace>
+    <AssemblyName>PathFinder</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NeededCell.cs" />
-    <Compile Include="pathfinder.cs" />
+    <Compile Include="Cell.cs" />
+    <Compile Include="Maze.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -52,35 +52,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="tests\labirint10+.txt" />
-    <Content Include="tests\labirint11-block.txt" />
-    <Content Include="tests\labirint12+.txt" />
-    <Content Include="tests\labirint13+.txt" />
-    <Content Include="tests\labirint14+.txt" />
-    <Content Include="tests\labirint15+.txt" />
-    <Content Include="tests\labirint2-.txt" />
-    <Content Include="tests\labirint3-.txt" />
-    <Content Include="tests\labirint4-.txt" />
-    <Content Include="tests\labirint5-.txt" />
-    <Content Include="tests\labirint6-block-.txt" />
-    <Content Include="tests\labirint7-------+.txt" />
-    <Content Include="tests\labirint8+.txt" />
-    <Content Include="tests\labirint9-.txt" />
-    <Content Include="тесты\simple.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <COMReference Include="Microsoft.Office.Core">
-      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
-      <VersionMajor>2</VersionMajor>
-      <VersionMinor>8</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>primary</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
+    <Content Include="tests\maze1.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
